--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>jclub admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/base.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/base.js"></script>
   </head>
   <body>
     <header class="navbar navbar-jclub navbar-fixed-top" role="banner">
@@ -21,9 +23,33 @@
           <li><span class="glyphicon glyphicon-list-alt"></span></li>
         </ul>
       </div>
+      <div class="right">
+        <div class="navbar-tool">
+          <ul>
+            <li class="fase-menu" data-toggle="tooltip" data-original-title="快捷菜单" data-placement="left">
+              <span class="glyphicon glyphicon-th-large"></span>
+            </li>
+          </ul>
+        </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown navbar-face-li">
+              <a href="#" class="dropdown-toggle navbar-face" data-toggle="dropdown">
+                <img src="images/face.jpg">
+                <span>Administrator</span>
+                <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+      </div>
     </header>
     <div class="sidebar affix">
-      <h1>sidebar</h1>
     </div>
   </body>
 </html>
