FACE显示的修改

--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -23,7 +23,7 @@
           <li><span class="glyphicon glyphicon-list-alt"></span></li>
         </ul>
       </div>
-      <div class="right">
+      <div class="fr">
         <div class="navbar-tool">
           <ul>
             <li class="fase-menu" data-toggle="tooltip" data-original-title="快捷菜单" data-placement="left">
@@ -31,22 +31,20 @@
             </li>
           </ul>
         </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown navbar-face-li">
-              <a href="#" class="dropdown-toggle navbar-face" data-toggle="dropdown">
-                <img src="images/face.jpg">
-                <span>Administrator</span>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
+        <div class="btn-group navbar-face navbar-right">
+          <div class="navbar-img" data-toggle="dropdown">
+            <img src="images/face.jpg">
+            <span>Administrator</span>
+            <b class="caret"></b>
+          </div>
+          <ul class="dropdown-menu">
+            <li><a href="#">ActionActionA</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
           </ul>
+        </div>
       </div>
     </header>
     <div class="sidebar affix">
