修改FACE样式，话说BOOTSTRAP的扩展性可真强啊。

--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -31,20 +31,22 @@
             </li>
           </ul>
         </div>
-        <div class="btn-group navbar-face navbar-right">
-          <div class="navbar-img" data-toggle="dropdown">
-            <img src="images/face.jpg">
-            <span>Administrator</span>
-            <b class="caret"></b>
-          </div>
-          <ul class="dropdown-menu">
-            <li><a href="#">ActionActionA</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div>
+        <ul class="nav navbar-nav navbar-right navbar-face">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle navbar-face-a" data-toggle="dropdown">
+              <img src="images/face.jpg">
+              <span>Administrator</span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">ActionActionActionActionAction</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </header>
     <div class="sidebar affix">
