--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -56,9 +56,16 @@
             </li>
             <li>
                 <a href="#">
-                  <b class="glyphicon glyphicon-user"></b>
-                  <span>用户管理</span>
+                  <b class="glyphicon glyphicon-user"></b>用户管理
                 </a>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <b class="glyphicon glyphicon-dashboard"></b>
+                      <span>控制台</span>
+                    </a>
+                  </li>
+                </ul>
             </li>
             <li>
                 <a href="#">
