这次修改的要好一些了。

--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -49,41 +49,23 @@
         <div class="content">
           <ul class="first">
             <li class="active">
-                <a href="#">
-                  <b class="glyphicon glyphicon-dashboard"></b>
-                  <span>控制台</span>
-                </a>
+                <a href="#"><b class="glyphicon glyphicon-dashboard"></b>控制台</a>
             </li>
             <li>
-                <a href="#">
-                  <b class="glyphicon glyphicon-user"></b>用户管理
-                </a>
-                <ul>
-                  <li>
-                    <a href="#">
-                      <b class="glyphicon glyphicon-dashboard"></b>
-                      <span>控制台</span>
-                    </a>
-                  </li>
+                <a href="#"><b class="glyphicon glyphicon-user"></b>用户管理</a>
+                <ul class="second">
+                  <li><a href="#"><b class="glyphicon glyphicon-dashboard"></b>添加用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-dashboard"></b>所有用户</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">
-                  <b class="glyphicon glyphicon-list"></b>
-                  <span>帖子管理</span>
-                </a>
+                <a href="#"><b class="glyphicon glyphicon-list-alt"></b>帖子管理</a>
             </li>
             <li>
-                <a href="#">
-                  <b class="glyphicon glyphicon-usd"></b>
-                  <span>积分设置</span>
-                </a>
+                <a href="#"><b class="glyphicon glyphicon-usd"></b>积分设置</a>
             </li>
             <li>
-                <a href="#">
-                  <b class="glyphicon glyphicon-list-alt"></b>
-                  <span>公告管理</span>
-                </a>
+                <a href="#"><b class="glyphicon glyphicon-list"></b>公告管理</a>
             </li>
           </ul>
         </div>
