二级菜单完毕。

--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -53,13 +53,17 @@
             </li>
             <li>
                 <a href="#"><b class="glyphicon glyphicon-user"></b>用户管理</a>
-                <ul class="second">
-                  <li><a href="#"><b class="glyphicon glyphicon-dashboard"></b>添加用户</a></li>
-                  <li><a href="#"><b class="glyphicon glyphicon-dashboard"></b>所有用户</a></li>
-                </ul>
             </li>
-            <li>
+            <li class="selected">
                 <a href="#"><b class="glyphicon glyphicon-list-alt"></b>帖子管理</a>
+                <ul class="second">
+                  <li class="active"><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>添加用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                </ul>
             </li>
             <li>
                 <a href="#"><b class="glyphicon glyphicon-usd"></b>积分设置</a>
