完成Sidebar和Title栏，并且修改了滚动条的显示BUG

--- a/jwell-club/html/admin/index.html
+++ b/jwell-club/html/admin/index.html
@@ -48,16 +48,19 @@
       <div class="nano">
         <div class="content">
           <ul class="first">
-            <li class="active">
+            <li><!-- class="active" -->
                 <a href="#"><b class="glyphicon glyphicon-dashboard"></b>控制台</a>
             </li>
             <li>
                 <a href="#"><b class="glyphicon glyphicon-user"></b>用户管理</a>
             </li>
-            <li class="selected">
-                <a href="#"><b class="glyphicon glyphicon-list-alt"></b>帖子管理</a>
+            <li>
+                <a href="javascript:" data-toggle="subclass">
+                  <b class="glyphicon glyphicon-list-alt"></b>帖子管理
+                </a>
                 <ul class="second">
-                  <li class="active"><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>添加用户</a></li>
+                   <!-- class="active" -->
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>添加用户</a></li>
                   <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
                   <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
                   <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
@@ -66,15 +69,45 @@
                 </ul>
             </li>
             <li>
-                <a href="#"><b class="glyphicon glyphicon-usd"></b>积分设置</a>
+                <a href="javascript:" data-toggle="subclass">
+                  <b class="glyphicon glyphicon-usd"></b>积分设置
+                </a>
+                <ul class="second">
+                   <!-- class="active" -->
+                  <li ><a href="#" ><b class="glyphicon glyphicon-chevron-right"></b>添加用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li class="active"><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                </ul>
             </li>
             <li>
-                <a href="#"><b class="glyphicon glyphicon-list"></b>公告管理</a>
+                <a href="javascript:" data-toggle="subclass">
+                  <b class="glyphicon glyphicon-list"></b>公告管理
+                </a>
+                <ul class="second">
+                   <!-- class="active" -->
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>添加用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                  <li><a href="#"><b class="glyphicon glyphicon-chevron-right"></b>所有用户</a></li>
+                </ul>
             </li>
           </ul>
         </div>
       </div>
-      </div>
     </div>
+    <main class="main-jclub">
+      <div class="continer-jclub">
+        <div class="page-title">
+          <h3>帖子管理 - 添加用户</h3>
+          <small>添加一个自己的用户，哈哈哈</small>
+        </div>
+        aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />aaaa <br />
+      </div>
+    </main>
   </body>
 </html>
